# i-ADHoRe

./: CMakeLists.txt  Dockerfile  README.md
.github/workflow/: docker-push.yml
.github/workflows/: docker-build.yml  docker-image.yml  docker-push.yml
API/: iADHoRe.pm
API/iADHoRe/: agent.pm  anchorpoint.pm  basecluster.pm  central.pm  cluster.pm  gene.pm  genelist.pm  genepairs.pm  ghm.pm  list_element.pm  listfile.pm  multiplicon.pm  nw_path.pm  profile.pm  record_structure.pm  settings.pm
cmake/: FindGoogleTest.cmake
post_processing/: alignment_plot.pl  colinear_portions.pl  collinearityViz.pl  dupliStacks.pl  dupliviz.pl  generate_overview.pl  multiplicated_portions.pl  multiplicon_plot.pl  plot_ghms.pl  profile_plot.pl
src/: AlignDataSet.cpp  AlignDataSet.h  AlignmentDrawer.cpp  AlignmentDrawer.h  AlignmentVisualizer.cpp  AnchorPoint.h  BaseCluster.cpp  BaseCluster.h  CMakeLists.txt  Cluster.cpp  Cluster.h  DataSet.cpp  DataSet.h  GHM.cpp  GHM.h  GHMProfile.cpp  GHMProfile.h  Gene.cpp  Gene.h  GeneFamily.cpp  GeneFamily.h  GeneList.cpp  GeneList.h  GenePairs.cpp  GenePairs.h  ListElement.cpp  ListElement.h  ListFile.h  Multiplicon.cpp  Multiplicon.h  PostProcessor.cpp  PostProcessor.h  Profile.cpp  Profile.h  Settings.cpp  Settings.h  SvgWriter.cpp  SvgWriter.h  SynthenicCloud.cpp  SynthenicCloud.h  (+14 more)
src/alignment/: Aligner.h  AlignmentException.h  CMakeLists.txt  GGAligner.cpp  GGAligner.h  GGAligner2.cpp  GGAligner2.h  NWAligner.cpp  NWAligner.h  Node.cpp  Node.h
src/bmp/: CMakeLists.txt  bmp.cpp  bmp.h  color.cpp  color.h  grafix.cpp  grafix.h  pnghandling.cpp  pnghandling.h
src/datastructures/: stringhash.h
src/debug/: ArgumentException.h  FileException.h  pngwriter.cc  pngwriter.h  stopwatch.h
testset/datasetI/: datasetI.ini
testset/datasetI/arath_2_3_beta/: anchorpoints.txt  baseclusters.txt  cloudAP.txt  clouds.txt  genes.txt  list_elements.txt  multiplicon_pairs.txt  multiplicons.txt  segments.txt
testset/datasetI/ath_lists/: 1.lst  2.lst  3.lst  4.lst  5.lst
testset/datasetII/: alignment.csv  datasetII.ini
testset/datasetII/ath_lists_030210_201/: 1.lst  2.lst  3.lst  4.lst  5.lst  chloroplast.lst  mitochondrion.lst
testset/datasetII/ptr_lists_030210_201/: LG_I.lst  LG_II.lst  LG_III.lst  LG_IV.lst  LG_IX.lst  LG_V.lst  LG_VI.lst  LG_VII.lst  LG_VIII.lst  LG_X.lst  LG_XI.lst  LG_XII.lst  LG_XIII.lst  LG_XIV.lst  LG_XIX.lst  LG_XV.lst  LG_XVI.lst  LG_XVII.lst  LG_XVIII.lst  chloroplast.lst  scaffold_1007.lst  scaffold_1058.lst  scaffold_1063.lst  scaffold_107.lst  scaffold_1070.lst  scaffold_1103.lst  scaffold_1112.lst  scaffold_1119.lst  scaffold_1146.lst  scaffold_1154.lst  scaffold_117.lst  scaffold_118.lst  scaffold_119.lst  scaffold_1199.lst  scaffold_120.lst  scaffold_121.lst  scaffold_122.lst  scaffold_1221.lst  scaffold_123.lst  scaffold_1234.lst  (+338 more)
testset/datasetII/vvi_lists_030210_201/: chloroplast.lst  chr1.lst  chr10.lst  chr10_random.lst  chr11.lst  chr11_random.lst  chr12.lst  chr12_random.lst  chr13.lst  chr13_random.lst  chr14.lst  chr14_random.lst  chr15.lst  chr15_random.lst  chr16.lst  chr16_random.lst  chr17.lst  chr17_random.lst  chr18.lst  chr18_random.lst  chr19.lst  chr19_random.lst  chr1_random.lst  chr2.lst  chr3.lst  chr3_random.lst  chr4.lst  chr5.lst  chr6.lst  chr7.lst  chr7_random.lst  chr8.lst  chr9.lst  chrUn_random.lst  mitochondrion.lst
unittest/: AlignTest.cpp  CMakeLists.txt  IntroduceGapsTest.cpp  PackingTest.cpp  ParToolBoxTest.cpp  indexToXYTest.cpp  test.cpp
